--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a{
 
 /* HERO SECTION */
 .hero-container{
-    background: url('./assets/hero-bg.svg') no-repeat center center/cover;
+    background: url('../assets/hero-bg.svg') no-repeat center center/cover;
     min-height: 100vh;
 }
 
